; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_builtin.c_peek_dir.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_builtin.c_peek_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dirstack = type { i32, i32** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.dirstack*)* @peek_dir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @peek_dir(%struct.dirstack* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.dirstack*, align 8
  store %struct.dirstack* %0, %struct.dirstack** %3, align 8
  %4 = load %struct.dirstack*, %struct.dirstack** %3, align 8
  %5 = getelementptr inbounds %struct.dirstack, %struct.dirstack* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %20

9:                                                ; preds = %1
  %10 = load %struct.dirstack*, %struct.dirstack** %3, align 8
  %11 = getelementptr inbounds %struct.dirstack, %struct.dirstack* %10, i32 0, i32 1
  %12 = load i32**, i32*** %11, align 8
  %13 = load %struct.dirstack*, %struct.dirstack** %3, align 8
  %14 = getelementptr inbounds %struct.dirstack, %struct.dirstack* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = sub nsw i32 %15, 1
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32*, i32** %12, i64 %17
  %19 = load i32*, i32** %18, align 8
  store i32* %19, i32** %2, align 8
  br label %20

20:                                               ; preds = %9, %8
  %21 = load i32*, i32** %2, align 8
  ret i32* %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
